--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -16,9 +16,8 @@
       display: none;
     }
   }
-
-  @media screen and (max-width: 767px) {
-    // height: 90vh;
+  @media screen and (max-width: 1023px) {
+    background-size: 100vh auto;
   }
 }
 .app__header {
